Fix major UI bug - Navbar is now sticky - Navbar does not hide table headers on smaller screens

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -14,12 +14,6 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -38,7 +32,6 @@ ul {
 
 /* Utility classes */
 .center_container {
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
